# kal

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.manifest  build.rs  deno.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.git-hooks/: pre-commit
.githooks/: pre-commit
.github/workflows/: audit.yml  fmt.yml  lint.yml  release.yml  test.yml
.scripts/: build.ps1  create-installer.ps1  dev.ps1  generate-release-notes.ps1  release.ps1  setup.ps1
core/: Cargo.toml
core/src/: main.rs
installer/: installer.nsi
kal/: Cargo.toml  build.rs  kal.exe.manifest  kal.rc
kal-config/: Cargo.toml  schema.json
kal-config-schema-generator/: Cargo.toml  build.rs
kal-config/src/: appearance.rs  error.rs  general.rs  lib.rs  plugin.rs
kal-plugin/: Cargo.toml
kal-plugin-c/: Cargo.toml  kal-plugin.h
kal-plugin-c/src/: action.rs  config.rs  icon.rs  lib.rs  result_item.rs
kal-plugin/src/: action.rs  fuzzy_matcher.rs  icon.rs  lib.rs  plugin.rs  query_output.rs  result_item.rs
kal-plugins/app-launcher/: Cargo.toml
kal-plugins/app-launcher/src/: lib.rs  packaged_app.rs  program.rs
kal-plugins/calculator/: Cargo.toml
kal-plugins/calculator/src/: lib.rs
kal-plugins/cc/: Cargo.toml
kal-plugins/cc/src/: lib.rs  main.rs
kal-plugins/directory-indexer/: Cargo.toml
kal-plugins/directory-indexer/src/: lib.rs
kal-plugins/everything/: Cargo.toml
kal-plugins/everything/src/: lib.rs
kal-plugins/shell/: Cargo.toml
kal-plugins/shell/src/: lib.rs
kal-plugins/system-commands/: Cargo.toml
kal-plugins/system-commands/src/: lib.rs
kal-plugins/vscode-workspaces/: Cargo.toml
kal-plugins/vscode-workspaces/src/: lib.rs
kal-plugins/workflows/: Cargo.toml
kal-plugins/workflows/src/: lib.rs
kal-ui/: deno.json  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
kal-ui/src/: App.vue  env.d.ts  ipc.ts  ipc_event.ts  main.ts  result_item.ts  router.ts  search_result_item.ts  utils.ts  vite-env.d.ts
kal-ui/src/components/: Divider.vue  ReloadIcon.vue  ResultItem.vue  ResultItemAction.vue  SearchBox.vue
kal-ui/src/composables/: config.ts  customCss.ts  systemAccentColor.ts
kal-ui/src/windows/: Main.vue  Run.vue
kal-utils/: Cargo.toml
kal-utils/src/: iterator.rs  lib.rs  path.rs  shell.rs  string.rs
kal/src/: app.rs  config.rs  embedded_assets.rs  event.rs  fuzzy_matcher.rs  ipc_event.rs  lib.rs  main.rs  main_window.rs  plugin.rs  plugin_manager.rs  plugin_store.rs  protocol.rs  result_item.rs  search_result_item.rs  vibrancy.rs  webview_window.rs
kal/src/icon/: extract.rs  mod.rs  service.rs
kal/src/ipc/: ipc.js  mod.rs  response.rs
kal/src/main_window/: init.js  mod.rs
kal/src/plugins/: mod.rs
kal/src/plugins/app_launcher/: mod.rs  packaged_app.rs  program.rs
kal/src/plugins/calculator/: mod.rs
kal/src/plugins/directory_indexer/: mod.rs
kal/src/plugins/everything/: mod.rs
kal/src/plugins/packaged_app_launcher/: mod.rs
kal/src/plugins/shell/: mod.rs
kal/src/plugins/system_commands/: mod.rs
kal/src/plugins/vscode_workspaces/: mod.rs
kal/src/plugins/workflows/: mod.rs
kal/src/utils/: icon.rs  mod.rs  path.rs  shell.rs  shortcut.rs  system_accent.rs  thread.rs
kal/src/windowing/: embedded_assets.rs  ipc.js  ipc.rs  mod.rs  vibrancy.rs  webview_window.rs
src/common/: icon.rs  icon.ts  index.ts  ipc_event.rs  mod.rs  search_result_item.rs  search_result_item.ts
src/common_types/: icon.rs  icon.ts  index.ts  ipc_event.rs  ipc_event.ts  mod.rs  search_result_item.rs  search_result_item.ts
src/core/: config.rs  event.rs  fuzzy_sort.rs  ipc.rs  main.rs  plugin.rs  protocol.rs  protocols.rs  utils.rs  vibrancy.rs  webview_window.rs
src/core/plugins/: app_launcher.rs  mod.rs
src/core/plugins/app_launcher/: mod.rs  windows.rs
src/core/plugins/calculator/: mod.rs
src/core/plugins/directory_indexer/: mod.rs  windows.rs
src/core/plugins/everything/: mod.rs
src/core/plugins/packaged_app_launcher/: mod.rs
src/core/plugins/shortcuts/: mod.rs  windows.rs
src/core/plugins/system_commands/: mod.rs  windows.rs
src/core/plugins/workflows/: mod.rs
src/core/utils/: icon.rs  mod.rs  path.rs  shell.rs  windows.rs
src/ui/: index.html  index.tsx  main.ts  shims.d.ts  style.css  utils.ts  window.d.ts
src/ui/icons/: ConfirmationIcon.vue  InfoIcon.vue  RefreshingIcon.vue  SearchIcon.vue
src/ui/routes/: SearchInput.tsx  SearchResults.tsx  main_window.tsx
src/ui/windows/: Main.vue  main.css  main.tsx
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.tsx  window.d.ts
ui/src/components/SearchInput/: index.tsx  style.css
ui/src/components/SearchResults/: index.tsx  style.css
