[workspace]
members = ["kal", 'kal-config']
resolver = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
serde = "1"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dirs = "5.0"
