[workspace]
members = ["kal", "kal-config", "kal-plugin", "kal-plugins/*"]
resolver = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
serde = "1"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dirs = "5.0"
schemars = "1.0.0-alpha.17"
anyhow = "1"
nucleo-matcher = "0.3"
strum = "0.26"
async-trait = "0.1"
windows = "0.59"
rfd = { version = "0.15", default-features = false }
url = "2.5"
serialize-to-javascript = "0.1"
smol = "2.0"
percent-encoding = "2.3"
