[package]
name = "kal"
version = "0.1.0"
description = "Keyboard-driven app launcher."
authors = [ "Amr Bashir <amr.bashir2015@gmail.com>" ]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"
rust-version = "1.56"

[dependencies]
wry = { git = "https://github.com/tauri-apps/wry", branch="next", features = ["protocol"]}
serde = "1.0.117"
serde_json = "1.0.78"
