[package]
name = "kal-config-schema-generator"
version = "0.1.0"
description = "Configuration types for kal."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[build-dependencies]
schemars.workspace = true
serde_json.workspace = true
kal-config = { path = "../kal-config" }
