[package]
name = "kal-config"
version = "0.3.2"
description = "Configuration types for kal."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror = "1"
tracing.workspace = true
dirs.workspace = true
schemars.workspace = true
