[package]
name = "kal-utils"
version = "0.2.0"
description = "Utils for kal."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[dependencies]
serde.workspace = true
serialize-to-javascript.workspace = true
anyhow.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_System_Registry",
  "Win32_System_Com",
  "UI_ViewManagement",
]
