[package]
name = "kal"
version = "0.1.0"
description = "Keyboard-driven app launcher and productivity tool."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[build-dependencies]
embed-resource = "2.5"

[dependencies]
kal-config = { path = "../kal-config" }
wry = { git = "https://github.com/tauri-apps/wry", rev = "b3926d01db1628e521ca22861e7efbe6f30a538f" }
winit = { git = "https://github.com/amrbashir/winit", rev = "f26f5419bac8b135ffa6996ee8293c3138683d10" }
global-hotkey = "0.6"
tray-icon = "0.19"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rust-embed = "8.1"
serialize-to-javascript = "0.1"
nucleo-matcher = "0.3"
dirs.workspace = true
percent-encoding = "2.3"
dunce = "1"
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"
url = { version = "2.5", features = ["serde"] }
sci-calc = "1.0.1"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
strum = { version = "0.26", features = ["derive"] }
rfd = { version = "0.15", default-features = false }
smol = "2.0"
async-trait = "0.1"
sqlite = "0.36"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
softbuffer = "0.4"
webview2-com = "0.35"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_Graphics_Dwm",
  "Win32_System_Shutdown",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_Com",
  "Win32_System_IO",
  "Win32_Storage_Packaging_Appx",
  "Win32_Security",
  "Win32_Graphics_Gdi",
  "Management_Deployment",
  "ApplicationModel",
  "Foundation_Collections",
  "UI_ViewManagement",
  "deprecated",
]
