[package]
name = "kal"
version = "0.2.0"
description = "Keyboard-driven app launcher and productivity tool."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"
default-run = "kal"

[build-dependencies]
embed-resource = "2.5"
schemars.workspace = true
serde_json.workspace = true
kal-config = { path = "../kal-config" }

[dependencies]
kal-config = { path = "../kal-config" }
kal-plugin = { path = "../kal-plugin" }
kal-utils = { path = "../kal-utils" }
wry = { git = "https://github.com/tauri-apps/wry", rev = "b3926d01db1628e521ca22861e7efbe6f30a538f" }
winit = { git = "https://github.com/amrbashir/winit", rev = "f26f5419bac8b135ffa6996ee8293c3138683d10" }
global-hotkey = "0.6"
tray-icon = "0.19"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rust-embed = "8.1"
serialize-to-javascript.workspace = true
nucleo-matcher.workspace = true
dirs.workspace = true
percent-encoding.workspace = true
dunce = "1"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"
url = { workspace = true, features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
strum = { workspace = true, features = ["derive"] }
rfd = { workspace = true, default-features = false }
smol = "2.0"
async-trait.workspace = true
kal-plugin-app-launcher = { path = "../kal-plugins/app-launcher" }
kal-plugin-calculator = { path = "../kal-plugins/calculator" }
kal-plugin-directory-indexer = { path = "../kal-plugins/directory-indexer" }
kal-plugin-everything = { path = "../kal-plugins/everything" }
kal-plugin-shell = { path = "../kal-plugins/shell" }
kal-plugin-system-commands = { path = "../kal-plugins/system-commands" }
kal-plugin-vscode-workspaces = { path = "../kal-plugins/vscode-workspaces" }
kal-plugin-workflows = { path = "../kal-plugins/workflows" }

[target.'cfg(target_os = "windows")'.dependencies]
softbuffer = "0.4"
webview2-com = "0.35"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
]
