[package]
name = "kal-plugin-everything"
version = "0.2.0"
description = "Everything plugin for kal."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[dependencies]
kal-config = { path = "../../kal-config" }
kal-plugin = { path = "../../kal-plugin" }
kal-utils = { path = "../../kal-utils" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
