[package]
name = "kal-plugin-vscode-workspaces"
version = "0.2.0"
description = "VSCode workspaces plugin for kal."
authors = ["Amr Bashir <contact@amrbashir.me>"]
repository = "https://github.com/amrbashir/kal"
license = "MIT"
edition = "2021"

[dependencies]
kal-config = { path = "../../kal-config" }
kal-plugin = { path = "../../kal-plugin" }
kal-utils = { path = "../../kal-utils" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
percent-encoding.workspace = true
dirs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlite = "0.36"
